[package]
name = "drink_blender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = [ "derive" ] }
liquidfun = { git = "https://github.com/TeamCafein/liquidfun-rust" }
pollster = "0.2.5"
wgpu = "0.14.0"
winit = "0.27.3"
